# Food_Recomandation_System_Service_KGE

./: Dockerfile  pyproject.toml
.github/workflows/: build-docker.yml
backend/: main.py
backend/core/: data_loading.py  graph_triples.py  model.py  recommender.py  utils.py
backend/models/: schemas.py
backend/routers/: recipe_info.py  recommend.py  unique_items.py
data/: recipes.csv  triples.csv
embedding/: model.pkl
frontend/: index.html  script.js  style.css
